layout bugfixes

--- a/framework/bootstrap/assets/less/footer.less
+++ b/framework/bootstrap/assets/less/footer.less
@@ -1,5 +1,6 @@
-#page-footer {
-	.container {
-		padding: 0 @grid-gutter-width;
+.fluid {
+	#page-footer {
+		padding-left: (@grid-gutter-width / 2);
+		padding-right: (@grid-gutter-width / 2);
 	}
 }
