--- a/framework/bootstrap/assets/less/layout.less
+++ b/framework/bootstrap/assets/less/layout.less
@@ -1,3 +1,12 @@
-.boxed-style .boxed-container {
-	margin-top: @navbar-margin-top;
+body.boxed-style {
+	.boxed-container {
+		margin-top: @navbar-margin-top;
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
+
+.wrap.main-section.fluid {
+	padding-left: (@grid-gutter-width / 2);
+	padding-right: (@grid-gutter-width / 2);
 }
